h264parse: do not set CAPS and passthrough mode if SPS/PPS have not been parsed

https://bugzilla.gnome.org/show_bug.cgi?id=705452